[gd_scene load_steps=15 format=3 uid="uid://bei37kgwvf3kl"]

[ext_resource type="PackedScene" uid="uid://dasv4t5os4ab6" path="res://game/enemy/enemy.tscn" id="1_jglgw"]
[ext_resource type="Script" path="res://game/enemy/ground_enemy.gd" id="2_gjebj"]
[ext_resource type="Texture2D" uid="uid://dy4ajlhq78133" path="res://game/enemy/assets/ground_enemy.png" id="2_kuuc7"]
[ext_resource type="Script" path="res://game/stats/stats.gd" id="3_hqxhv"]

[sub_resource type="Resource" id="Resource_tsyhi"]
resource_local_to_scene = true
script = ExtResource("3_hqxhv")
max_health = 1.0

[sub_resource type="Animation" id="Animation_rbogo"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_3g17t"]
resource_name = "Run"
length = 0.3
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_q0iks"]
_data = {
"RESET": SubResource("Animation_rbogo"),
"Run": SubResource("Animation_3g17t")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_pfnqn"]
radius = 11.0

[sub_resource type="CircleShape2D" id="CircleShape2D_oa1b4"]
radius = 8.0

[sub_resource type="Animation" id="Animation_vuwdw"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1.5, 1.5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_8dykn"]
resource_name = "squish_right"
length = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0333333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Vector2(1.5, 1), Vector2(1.5, 0.65)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0333333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Vector2(0, 3.5), Vector2(0, 6)]
}

[sub_resource type="Animation" id="Animation_0ywf7"]
resource_name = "squish_left"
length = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0333333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Vector2(-1.5, 1), Vector2(-1.5, 0.65)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0333333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Vector2(0, 3.5), Vector2(0, 6)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5y0av"]
_data = {
"RESET": SubResource("Animation_vuwdw"),
"squish_left": SubResource("Animation_0ywf7"),
"squish_right": SubResource("Animation_8dykn")
}

[node name="GroundEnemy" instance=ExtResource("1_jglgw")]
script = ExtResource("2_gjebj")
speed = 75.0
fall_speed = 150.0
stats = SubResource("Resource_tsyhi")
head_kill_enemy = true

[node name="Sprite2D" parent="." index="0"]
scale = Vector2(1.5, 1.5)
texture = ExtResource("2_kuuc7")
hframes = 3

[node name="CollisionPolygon2D" parent="." index="1"]
polygon = PackedVector2Array(9, 5, 0, 11, -8, 5, -9, -8, 9, -8)

[node name="AnimationPlayer" parent="." index="2"]
libraries = {
"": SubResource("AnimationLibrary_q0iks")
}
autoplay = "Run"

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
shape = SubResource("CircleShape2D_pfnqn")

[node name="CollisionShape2D" parent="Hitbox" index="0"]
shape = SubResource("CircleShape2D_oa1b4")

[node name="LeftFloorRayCast2D" type="RayCast2D" parent="." index="5"]
position = Vector2(-13, 0)
target_position = Vector2(0, 14)

[node name="RightFloorRayCast2D2" type="RayCast2D" parent="." index="6"]
position = Vector2(12, 0)
target_position = Vector2(0, 14)

[node name="VisibleOnScreenEnabler2D" type="VisibleOnScreenEnabler2D" parent="." index="7"]
scale = Vector2(3.2, 3.2)

[node name="SquishAnimationPlayer" type="AnimationPlayer" parent="." index="8"]
libraries = {
"": SubResource("AnimationLibrary_5y0av")
}

[connection signal="screen_entered" from="VisibleOnScreenEnabler2D" to="." method="_on_visible_on_screen_enabler_2d_screen_entered"]
[connection signal="screen_exited" from="VisibleOnScreenEnabler2D" to="." method="_on_visible_on_screen_enabler_2d_screen_exited"]
